add nuxt-viewport plugin

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "husky": "^8.0.3",
     "nuxt": "^3.6.5",
     "nuxt-layout-compositions": "^1.1.1",
+    "nuxt-viewport": "^2.0.6",
     "pug": "^3.0.2",
     "stylus": "^0.59.0",
     "vitest": "^0.33.0",
