--- a/.eslintrc
+++ b/.eslintrc
@@ -7,4 +7,7 @@
     "@typescript-eslint/no-unused-vars": "off",
     "vue/multi-word-component-names": "off"
   },
+  "plugins": [
+    "vitest"
+  ]
 }
