--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "test": "vitest --run --reporter verbose --globals",
-    "test:watch": "vitest --reporter verbose --globals"
+    "test:watch": "vitest --reporter verbose --globals",
+    "test:ui": "vitest --ui --reporter verbose --globals"
   },
   "config": {
     "commitizen": {
@@ -15,31 +16,36 @@
     }
   },
   "devDependencies": {
-    "@intlify/unplugin-vue-i18n": "^0.12.2",
-    "@nuxt/content": "^2.7.2",
-    "@nuxt/image-edge": "1.0.0-rc.1-28180077.d51e794",
-    "@nuxtjs/eslint-config-typescript": "^12.0.0",
-    "@vue/language-plugin-pug": "^1.8.8",
+    "@intlify/unplugin-vue-i18n": "^0.12.3",
+    "@nuxt/content": "^2.10.0",
+    "@nuxt/image": "^1.3.0",
+    "@nuxtjs/eslint-config-typescript": "^12.1.0",
+    "@vitejs/plugin-vue": "^4.6.2",
+    "@vitest/ui": "^0.34.7",
+    "@vue/language-plugin-pug": "^1.8.27",
+    "@vue/test-utils": "^2.4.3",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.47.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-vitest": "^0.2.8",
+    "happy-dom": "^10.11.2",
     "husky": "^8.0.3",
-    "nuxt": "^3.6.5",
+    "nuxt": "^3.9.3",
     "nuxt-layout-compositions": "^1.1.2",
-    "nuxt-viewport": "^2.0.6",
+    "nuxt-viewport": "^2.1.0",
     "pug": "^3.0.2",
     "stylus": "^0.59.0",
     "vitest": "^0.33.0",
-    "vue-i18n": "^9.2.2"
+    "vue-i18n": "^9.9.0"
   },
   "dependencies": {
     "@morev/vue-transitions": "^2.3.6",
-    "@nuxtjs/color-mode": "^3.3.0",
-    "@nuxtjs/google-fonts": "^3.0.2",
-    "@nuxtjs/html-validator": "^1.5.2",
+    "@nuxtjs/color-mode": "^3.3.2",
+    "@nuxtjs/google-fonts": "^3.1.3",
+    "@nuxtjs/html-validator": "^1.6.0",
     "@pinia/nuxt": "^0.4.11",
-    "@unlighthouse/nuxt": "^0.10.0",
-    "@vueuse/nuxt": "^10.3.0",
-    "axios": "^1.4.0",
+    "@unlighthouse/nuxt": "^0.10.4",
+    "@vueuse/nuxt": "^10.7.2",
+    "axios": "^1.6.5",
     "nuxt-icon": "^0.4.2",
     "nuxt-purgecss": "^2.0.0"
   }
